# lucky-draw-web-service

./: .env  README.md  docker-compose.yml  sys-arch.drawio
server/: .env  Cargo.toml  Dockerfile  scratchpad.pgsql
server/migrations/: 0001_create_tables.sql  0001_user_table.sql
server/src/: main.rs  store.rs  types.rs
server/src/campaign/: mod.rs  test.rs
server/src/draw/: mod.rs
server/src/redeem/: mod.rs
server/src/user/: mod.rs  test.rs  user.rs
