[package]
name = "lucky-draw-web-service"
description = "A web service for lucky draw"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
  "artizon-io <mingsum.sam@gmail.com>"
]

[dependencies]
axum = { version = "0.6", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
utoipa = { version = "4.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version="1.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "1.0.0", features = ["axum"]}
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.31"
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio-comp"] }
indoc = "2.0.4"
dotenv = "0.15.0"
mime = "0.3.17"
